bookstack/bookstack-notifier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack-notifier-deployment
  labels:
    app: bookstack-notifier
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: bookstack-notifier
  template:
    metadata:
      labels:
        app: bookstack-notifier
    spec:
      serviceAccountName: bookstack-notifier
      imagePullSecrets:
        - name: registry.internal.aleemhaji.com
      containers:
        - name: bookstack-notifier
          image: registry.internal.aleemhaji.com/kubectl:1.21.0
          command:
            - /scripts/base/script.sh
          volumeMounts:
            - name: shell-monitor-base-scripts
              mountPath: /scripts/base
            - name: bookstack-notifier-script
              mountPath: /scripts/monitor
      volumes:
        - name: shell-monitor-base-scripts
          configMap:
            name: shell-monitor-base-config
            defaultMode: 0755
        - name: bookstack-notifier-script
          configMap:
            name: bookstack-notifier-script
            defaultMode: 0755
