bookstack/bookstack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack-deployment
  labels:
    app: bookstack
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      imagePullSecrets:
        - name: registry.internal.aleemhaji.com
      containers:
        - name: bookstack
          image: registry.internal.aleemhaji.com/bookstack:23.02.2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: bookstack-persistent-storage
              mountPath: /config
      volumes:
        - name: bookstack-persistent-storage
          nfs:
            server: 192.168.96.4
            path: /mnt/main/apps/bookstack
---
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  labels:
    app: bookstack
spec:
  ports:
    - port: 80
      protocol: TCP
  type: NodePort
  selector:
    app: bookstack
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack-ingress-redirect
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/temporal-redirect: https://bookstack.internal.aleemhaji.com
spec:
  rules:
    - host: bookstack
    - host: bookstack.home
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
    - hosts:
        - bookstack.internal.aleemhaji.com
      secretName: internal-certificate-files
  rules:
    - host: bookstack.internal.aleemhaji.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookstack
                port:
                  number: 80
